
The changes in each Verilator version are described below.  The
contributors that suggested a given feature are shown in []. Thanks!


Verilator 5.003 devel
==========================

**Minor:**

* Deprecate --no-threads; use --threads 1 for single threaded (#3703). [Kamil Rakoczy, Antmicro Ltd]
* Support named properties (#3667). [Ryszard Rozak, Antmicro Ltd]
* Support randcase.
* Add ENUMVALUE warning when value misused for enum (#726).
* Internal AST improvements, also affect XML format (#3721). [Geza Lore]
* Change ENDLABEL from warning into an error.
* Fix return type of $countbits functions to int (#3725). [Ryszard Rozak, Antmicro Ltd]
* Fix missing UNUSED warnings with --coverage (#3736). [alejandro-castro-ortegon]
* Fix tracing parameters overridden with -G (#3723). [Iztok Jeras]
* Fix wait 0.
* Fix comparing ranged slices of unpacked arrays.


Verilator 5.002 2022-10-29
==========================

**Major:**

* This is a major new release.
* Require C++20 for the new --timing features. Upgrading to a C++20 or
  newer compiler is strongly recommended.
* Support the Active and NBA scheduling regions as defined by the
  SystemVerilog standard (IEEE 1800-2017 chapter 4). This means all generated
  clocks are now simulated correctly (#3278, #3384). [Geza Lore, Shunyao CAD]
* Support timing controls (delays, event controls in any location, wait
  statements) and forks. [Krzysztof Bieganski, Antmicro Ltd]
  This may require adding --timing or --no-timing. See docs for details.
* Introduce a new combinational logic optimizer (DFG), that can yield
  significant performance improvements on some designs. [Geza Lore, Shunyao CAD]
* Add --binary option as alias of --main --exe --build --timing (#3625).
  For designs where C++ was only used to make a simple no-I/O testbench, we
  recommend abandoning that C++, and instead letting Verilator build it
  with --binary (or --main).

**Minor:**
