@@ -16,6 +16,7 @@ Verilator 5.003 devel
 * Deprecate --no-threads; use --threads 1 for single threaded (#3703). [Kamil Rakoczy, Antmicro Ltd]
 * Support named properties (#3667). [Ryszard Rozak, Antmicro Ltd]
 * Support randcase.
+* Support pre_randomize and post_randomize.
 * Add ENUMVALUE warning when value misused for enum (#726).
 * Internal AST improvements, also affect XML format (#3721). [Geza Lore]
 * Change ENDLABEL from warning into an error.
